--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "leaflet": "^1.9.3",
     "next": "13.2.1",
     "patch-package": "^6.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.0",
     "sass": "^1.58.3",
     "sharp": "^0.31.3"
   },
