--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,9 @@
     "**/*.mjs",
     ".next/types/**/*.ts",
     "next-env.d.ts"
-  ]
+  ],
+  "compilerOptions": {
+    "jsx": "preserve"
+  },
+  "plugins": [{ "name": "next" }]
 }
