--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "dotenv ley"
   },
   "dependencies": {
+    "@types/dotenv-safe": "^8.1.2",
+    "dotenv-cli": "^7.0.0",
+    "dotenv-safe": "^8.2.0",
     "leaflet": "^1.9.3",
+    "ley": "^0.8.1",
     "next": "13.2.1",
     "patch-package": "^6.5.1",
+    "postgres": "^3.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-leaflet": "^4.2.0",
