--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/dotenv-safe": "^8.1.2",
+    "bcrypt": "^5.1.0",
     "dotenv-cli": "^7.0.0",
     "dotenv-safe": "^8.2.0",
     "leaflet": "^1.9.3",
@@ -24,11 +25,13 @@
     "react-dom": "18.2.0",
     "react-leaflet": "^4.2.0",
     "sass": "^1.58.3",
-    "sharp": "^0.31.3"
+    "sharp": "^0.31.3",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.19.1",
     "@next/eslint-plugin-next": "13.2.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/eslint": "8.21.1",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
