--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "migrate": "dotenv ley"
   },
   "dependencies": {
+    "@types/cookie": "^0.5.1",
     "@types/dotenv-safe": "^8.1.2",
     "bcrypt": "^5.1.0",
+    "cookie": "^0.5.0",
     "daisyui": "^2.51.2",
     "dotenv-cli": "^7.0.0",
     "dotenv-safe": "^8.2.0",
