--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
   "devDependencies": {
     "@babel/eslint-parser": "7.19.1",
     "@next/eslint-plugin-next": "13.2.3",
+    "@playwright/test": "^1.31.2",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.5.1",
     "@types/dotenv-safe": "^8.1.2",
     "@types/eslint": "8.21.1",
+    "@types/jest": "^29.5.0",
     "@types/leaflet": "^1.9.3",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
@@ -60,6 +62,8 @@
     "eslint-plugin-sonarjs": "0.18.0",
     "eslint-plugin-testing-library": "5.10.2",
     "eslint-plugin-unicorn": "46.0.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "typescript": "4.9.5"
