--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-leaflet": "^4.2.0",
     "sass": "^1.58.3",
     "sharp": "^0.31.3",
+    "stylelint": "^15.3.0",
     "zod": "^3.20.6"
   },
   "devDependencies": {
