--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sass": "^1.58.3",
     "sharp": "^0.31.3",
     "stylelint": "^15.3.0",
+    "stylelint-config-recommended": "^11.0.0",
     "zod": "^3.20.6"
   },
   "devDependencies": {
