--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,11 @@ yarn-error.log*
 playwright/test-results/
 playwright/report/
 /playwright/.cache/
+
+# PWA files
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
