Try fixing pwa error

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,10 @@ yarn-error.log*
 # vercel
 .vercel
 
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
 .eslintcache
 *.tsbuildinfo
 playwright/test-results/
