--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "stylelint-config-css-modules": "^4.2.0",
     "stylelint-config-recommended": "^11.0.0",
     "stylelint-config-recommended-scss": "^9.0.1",
+    "workbox-webpack-plugin": "^6.5.4",
     "zod": "^3.20.6"
   },
   "devDependencies": {
