--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "migrate": "dotenv ley"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^8.2.0",
     "bcrypt": "^5.1.0",
     "cookie": "^0.5.0",
     "daisyui": "^2.51.2",
@@ -20,7 +21,6 @@
     "leaflet-defaulticon-compatibility": "^0.1.1",
     "ley": "^0.8.1",
     "next": "13.2.3",
-    "next-pwa": "^5.6.0",
     "patch-package": "^6.5.1",
     "postcss-styled-syntax": "^0.4.0",
     "postgres": "^3.3.3",
